# roblox-cpp

./: CMakeLists.txt  README.md  output.lua
include/: roblox.h
src/: main.cpp  utils.h
src/luau-ast/: LuauAstGenerator.h  LuauNode.h  Variable.h  function.h  luau_ast_generator.h  test_node.h  util.h  variable.h
src/luau-code-gen/: LuauCodeGen.h
src/luau-code-gen/type-gen/: LuauTypeGenerator.h
tests/: example.cpp  output.lua
